ES2020 포스팅 내용 좀 수정

--- a/src/content/ES2020.md
+++ b/src/content/ES2020.md
@@ -35,7 +35,7 @@ if(!hello3) {
 }
 ```
 
-위 예시코드에서는 큰 문제가 하나 있는데요. 그것은 `iamNull`, `iamUndefined` 의 값이 `0` 이거나 `''` 과 같은 값일 때도 `false` 로 강제 변환되기 때문에  반드시 nullable 한 값 일 때만 처리하고 싶은 경우는 주의 하여야 합니다.
+위 예시코드에서는 큰 문제가 하나 있는데요. 그것은 `iamNull`, `iamUndefined` 의 값이 `0` 이거나 `''` 과 같은 값일 때도 `false` 로 강제 변환되기 때문에  반드시 nullish 한 값 일 때만 처리하고 싶은 경우는 주의 하여야 합니다.
 
 그런데 ES2020에서부터 제공되어지는 **널 병합 연산자**를 사용하면 반드시 `null`, `undefined`인 값 의 default 값 처리를 할 수 있습니다.
 
@@ -50,7 +50,8 @@ const hello4 = undefined ?? 'world'
 // hello4: 'world'
 ```
 
-또한 이것을 활용하여 object의 체이닝도 할 수 있습니다.
+# 선택적 체이닝 (Optional chaining)
+또한 이제는 알려지지 않은 속성 값에 대해 null safe한 object의 체이닝도 할 수 있습니다.
 
 예를들면 이런 것 입니다.
 
