네비에서 카테고리 나오게끔 구현

--- a/src/content/ES2020.md
+++ b/src/content/ES2020.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-category: "javascript"
+category: "Javascript"
 title: "ES2020"
 author: thxwelchs
 tags: ["javascript", "es2020", "ecma script", "ECMA"]
